--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -265,8 +265,9 @@
             }
 
             p {
+                padding: 0px 20px;
                 font-size: 13px;
-                text-align: center;
+                text-align: justify;
                 color: var(--text-dark-gray);
             }
         }
