--- a/src/components/Calls/Components/CallModal.scss
+++ b/src/components/Calls/Components/CallModal.scss
@@ -4,8 +4,14 @@
     @include flex-center(column, space-between, center);
     width: 500px;
     height: 390px;
- 
-    @include screen(768px){
+    position: relative;
+
+    &.video-call-Mode {
+        width: 560px;
+        height: 560px;
+    }
+
+    @include screen(768px) {
         width: 100%;
         height: 100%;
     }
@@ -14,7 +20,7 @@
     .logo-and-e2e-box {
         width: 100%;
         @include flex-center(row, space-between, center);
-
+        z-index: 2;
 
         img {
             width: 100px;
@@ -33,10 +39,12 @@
         @include flex-center(column, center, center);
         gap: 6px;
 
+
         img {
             width: 125px;
             border-radius: 50%;
             object-fit: cover;
+            transition: all 0.7s ease;
         }
 
         p {
@@ -49,6 +57,109 @@
             color: var(--text-input-gray);
             font-size: 15px;
         }
+
+        &.video-call-Mode {
+            img {
+                width: 70px;
+            }
+
+            p {
+                font-size: 17px;
+            }
+
+
+            span {
+
+                font-size: 14px;
+            }
+        }
+
+
+    }
+
+    .camera-bar {
+        width: 96%;
+        height: 100%;
+        @include flex-center(row, center, center);
+        position: relative;
+
+        .device-camera-box {
+            width: 65%;
+            border-radius: 40px;
+            z-index: 3;
+
+            video {
+                height: 100%;
+                width: 100%;
+                border-radius: 15px;
+                border: 3px solid var(--smooth-light-blue);
+                transition: all 0.7s ease;
+
+            }
+
+            &.remote-connected {
+                width: 100%;
+                display: flex;
+                justify-content: flex-end;
+                align-items: flex-end;
+                margin-bottom: 28px;
+                margin-right: 14px;
+
+
+                video {
+                    height: 130px;
+                    width: max-content;
+                    position: absolute;
+                    bottom: 7px;
+                }
+            }
+        }
+
+        .other-camera-box {
+            margin-top: 15px;
+            position: absolute;
+            width: 100%;
+            height: max-content;
+            @include flex-center(row, center, center);
+
+            video {
+                border-radius: 20px;
+                border: 4px solid var(--smooth-light-blue);
+
+            }
+
+            .user-info {
+                @include flex-center(row, flex-start, center);
+                gap: 10px;
+                background-color: rgba(41, 41, 41, 0.104);
+                padding: 5px;
+                padding-right: 20px;
+                padding-left: 7px;
+                border-radius: 30px;
+                position: absolute;
+                top: 20px;
+                width: max-content;
+                left: 20px;
+                color: var(--text-white);
+
+                img {
+                    height: 50px;
+                    width: 50px;
+                    border-radius: 50%;
+                }
+
+                p {
+                    font-size: 15px;
+                }
+            }
+        }
+    }
+
+    .video-call-time-status {
+        margin: 16px 0px 12px 0px;
+        
+        z-index: 10;
+
     }
 
     .call-option-buttons {
@@ -57,12 +168,13 @@
         background: var(--smooth-light-blue);
         border-radius: 40px;
         width: 370px;
+        z-index: 2;
 
-        @include screen(768px){
+
+        @include screen(768px) {
             width: 330px;
-          
         }
-    
+
 
         button {
             @include flex-center(row, center, center);
@@ -78,7 +190,7 @@
                 color: var(--text-white);
             }
 
-            &:first-child{
+            &:first-child {
                 color: #C8C9F7;
             }
 
