--- a/src/components/Settings/style.scss
+++ b/src/components/Settings/style.scss
@@ -281,8 +281,10 @@
                     position: relative;
                     width: max-content;
 
-                    img {
+
+                    .profile-image {
                         width: 90px;
+                        height: 90px;
                         border-radius: 50%;
                         object-fit: cover;
                     }
@@ -291,6 +293,42 @@
                         position: absolute;
                         top: 6px;
                         right: -3px;
+                    }
+
+                    .full-size-profil-image-box {
+                        @include flex-center(column, center, center);
+                        gap: 12px;
+                        position: fixed;
+                        top: 0;
+                        left: 0;
+                        width: 100%;
+                        height: 100%;
+                        background-color: rgba(28, 28, 28, 0.768);
+                        backdrop-filter: blur(4px);
+                        opacity: 0; // Başlangıçta görünmez
+                        animation: fadeIn 0.3s forwards; // Animasyon ekledik
+
+
+                        img {
+                            height: 80%;
+                            border-radius: 13px;
+                            transform: translateY(50px); // Başlangıç pozisyonu (50px aşağıda)
+                            opacity: 0; // Başlangıçta görünmez
+                            animation: slideUp 0.7s ease-out forwards; // Animasyonu uygula
+                        }
+
+                        button {
+                            @include flex-center(row, center, center);
+                            width: 42px;
+                            height: 42px;
+                            font-size: 28px;
+                            border-radius: 50%;
+                            background-color: var(--smooth-light-blue);
+                            color: var(--blue);
+                            position: absolute;
+                            top: 25px;
+                            right: 25px;
+                        }
                     }
                 }
 
@@ -450,12 +488,35 @@
                         }
                     }
                 }
-                .savePassword{
-                    &.disabled{
+
+                .savePassword {
+                    &.disabled {
                         opacity: 0.7;
                     }
                 }
             }
         }
+    }
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes slideUp {
+    from {
+        transform: translateY(30px); // 50px aşağıda başla
+        opacity: 0; // Şeffaf
+    }
+
+    to {
+        transform: translateY(0); // Normal pozisyona gel
+        opacity: 1; // Görünür
     }
 }
