--- a/src/components/Groups/Components/NewAndSettingsGroup/style.scss
+++ b/src/components/Groups/Components/NewAndSettingsGroup/style.scss
@@ -61,13 +61,54 @@
                     top: 10px;
                     right: 3px;
                     font-size: 25px;
-                    border-radius: 50%;
-                    background-color: var(--text-white);
-                    color: var(--blue);
-                    width: 35px;
-                    height: 35px;
-                    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+
                     cursor: pointer;
+
+                    .edit-btn {
+                        border-radius: 50%;
+                        background-color: var(--text-white);
+                        color: var(--blue);
+                        width: 35px;
+                        box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+                        height: 35px;
+                    }
+                }
+
+                .full-size-group-image-box {
+                    @include flex-center(column, center, center);
+                    gap: 12px;
+                    position: fixed;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                    background-color: rgba(28, 28, 28, 0.768);
+                    backdrop-filter: blur(4px);
+                    opacity: 0; // Başlangıçta görünmez
+                    animation: fadeIn 0.3s forwards; // Animasyon ekledik
+
+
+                    img {
+                        height: 80%;
+                        width: auto;
+                        border-radius: 13px;
+                        transform: translateY(50px); // Başlangıç pozisyonu (50px aşağıda)
+                        opacity: 0; // Başlangıçta görünmez
+                        animation: slideUp 0.7s ease-out forwards; // Animasyonu uygula
+                    }
+
+                    button {
+                        @include flex-center(row, center, center);
+                        width: 42px;
+                        height: 42px;
+                        font-size: 28px;
+                        border-radius: 50%;
+                        background-color: var(--smooth-light-blue);
+                        color: var(--blue);
+                        position: absolute;
+                        top: 25px;
+                        right: 25px;
+                    }
                 }
             }
         }
