--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -2,10 +2,12 @@
 
 
 .chat-general-box,
-.group-general-box,.archive-general-box {
+.group-general-box,
+.archive-general-box {
     @include flex-center(column, space-between, center);
     flex: 1;
     height: 100%;
+
 
     .user-top-bar,
     .group-top-bar {
@@ -112,6 +114,7 @@
         overflow: scroll;
         overflow-x: hidden;
         position: relative;
+        background-image: linear-gradient(60deg, rgba(172, 203, 246, 0.8), rgba(248, 198, 185, 1));
 
         .messages-list {
             display: flex;
@@ -132,14 +135,6 @@
                 height: 60px;
                 @include flex-center(row, center, center);
             }
-        }
-
-        .bottom-transparent-linear-gradient {
-            position: sticky;
-            bottom: 0;
-            height: 20px;
-            width: 100%;
-            background: linear-gradient(to top, rgb(255, 255, 255), rgba(51, 51, 51, 0));
         }
     }
 
