--- a/src/shared/components/MessageBubble/style.scss
+++ b/src/shared/components/MessageBubble/style.scss
@@ -10,9 +10,9 @@
         width: 100%;
         gap: 10px;
         height: max-content;
+    
 
         .image-box {
-
             img {
                 width: 40px;
                 border-radius: 50%;
@@ -51,6 +51,7 @@
             color: var(--user-message-text-color);
             font-size: 14px;
             @include flex-center(column, center, flex-start);
+            box-shadow: rgba(42, 42, 42, 0.205) 0px 2px 8px 0px;
 
             .user-info {
                 width: 100%;
@@ -72,7 +73,7 @@
         }
 
         .message-hour {
-            color: #989898;
+            color: rgb(100, 100, 100);
             text-align: center;
             font-size: 12px;
             font-weight: 700;
