--- a/src/layout/Dashboard/style.scss
+++ b/src/layout/Dashboard/style.scss
@@ -18,6 +18,7 @@
 
         img {
             width: 62px;
+            height: 62px;
             border-radius: 50%;
             object-fit: cover;
         }
