--- a/src/components/Groups/Components/NewAndSettingsGroup/style.scss
+++ b/src/components/Groups/Components/NewAndSettingsGroup/style.scss
@@ -161,8 +161,10 @@
             .group-admin img,
             .other-users img {
                 width: 60px;
+                height: 60px;
                 border-radius: 50%;
-                object-fit: cover
+                object-fit: cover;
+
             }
 
             .group-admin,
@@ -410,6 +412,7 @@
                             height: 52px;
                             object-fit: cover;
                             border-radius: 50%;
+                            border: 2px solid var(--smooth-blue);
                         }
 
                         // Or
