--- a/src/layout/Dashboard/components/style.scss
+++ b/src/layout/Dashboard/components/style.scss
@@ -78,11 +78,12 @@
             width: 14px;
             height: 14px;
             border-radius: 50%;
-
             border: 2px solid var(--smooth-white-color);
+ 
             position: absolute;
             right: 2px;
             bottom: 2px;
+            @include transition();
 
             &.online {
                 background-color: #26D97A;
