--- a/src/layout/Dashboard/components/style.scss
+++ b/src/layout/Dashboard/components/style.scss
@@ -79,7 +79,7 @@
             height: 14px;
             border-radius: 50%;
             border: 2px solid var(--smooth-white-color);
- 
+
             position: absolute;
             right: 2px;
             bottom: 2px;
@@ -172,6 +172,22 @@
     display: flex;
     flex-direction: column;
     height: 100%;
+
+    .user-list {
+
+        .no-active-chats {
+            @include flex-center(column, center, center);
+
+            img {
+                width: 250px;
+            }
+
+            p {
+                font-size: 13.7px;
+                color: var(--text-input-gray);
+            }
+        }
+    }
 }
 
 .call-list-box,
