Refactor message handling; enhance user color assignment in group messages, improve last message date retrieval, and clean up console logs in various components

--- a/src/shared/components/MessageBubble/style.scss
+++ b/src/shared/components/MessageBubble/style.scss
@@ -10,10 +10,12 @@
         width: 100%;
         gap: 10px;
         height: max-content;
-    
-        opacity: 0; /* Başlangıç opaklığı */
+
+        opacity: 0;
+        /* Başlangıç opaklığı */
         transform: translateY(45px);
-        animation: slideUpFadeIn 0.2s ease forwards; /* Animasyonu uygula */
+        animation: slideUpFadeIn 0.2s ease forwards;
+        /* Animasyonu uygula */
 
 
         .image-box {
@@ -56,6 +58,7 @@
             font-size: 14px;
             @include flex-center(column, center, flex-start);
             box-shadow: rgba(42, 42, 42, 0.205) 0px 2px 8px 0px;
+
             .user-info {
                 width: 100%;
                 @include flex-center(row, flex-start, center);
@@ -63,11 +66,11 @@
 
                 p {
                     font-weight: bold;
-                    color: var(--text-dark-gray);
                 }
 
             }
-            .image{
+
+            .image {
                 max-height: 350px;
                 border-radius: 5px;
                 margin-top: 5px;
@@ -89,19 +92,26 @@
         padding: 3px 5px;
         font-size: 17px;
         color: var(--text-input-gray);
-        opacity: 0; /* Başlangıç opaklığı */
+        opacity: 0;
+        /* Başlangıç opaklığı */
         transform: translateY(45px);
-        animation: slideUpFadeIn 0.2s ease forwards; /* Animasyonu uygula */
+        animation: slideUpFadeIn 0.2s ease forwards;
+        /* Animasyonu uygula */
     }
 }
 
 @keyframes slideUpFadeIn {
     0% {
-        opacity: 0; /* Görünmez */
-        transform: translateY(40px); /* Aşağıda başla */
+        opacity: 0;
+        /* Görünmez */
+        transform: translateY(40px);
+        /* Aşağıda başla */
     }
+
     100% {
-        opacity: 1; /* Görünür */
-        transform: translateY(0); /* Yukarı çık */
+        opacity: 1;
+        /* Görünür */
+        transform: translateY(0);
+        /* Yukarı çık */
     }
 }
