--- a/src/shared/components/MessageBubble/style.scss
+++ b/src/shared/components/MessageBubble/style.scss
@@ -23,6 +23,8 @@
                 width: 40px;
                 border-radius: 50%;
                 object-fit: cover;
+                box-shadow: rgba(42, 42, 42, 0.205) 0px 2px 8px 0px;
+
             }
         }
 
@@ -75,6 +77,8 @@
                 border-radius: 5px;
                 margin-top: 5px;
                 margin-bottom: 5px;
+
+
             }
         }
 
