Update MessageBubble styles; increase image size to 42px for improved visibility

--- a/src/shared/components/MessageBubble/style.scss
+++ b/src/shared/components/MessageBubble/style.scss
@@ -20,7 +20,8 @@
 
         .image-box {
             img {
-                width: 40px;
+                width: 42px;
+                height: 42px;
                 border-radius: 50%;
                 object-fit: cover;
                 box-shadow: rgba(42, 42, 42, 0.205) 0px 2px 8px 0px;
