--- a/src/components/Calls/Components/IncomingCall/style.scss
+++ b/src/components/Calls/Components/IncomingCall/style.scss
@@ -88,13 +88,17 @@
         transform: scale(1.1);
     }
 }
+
 @keyframes slideIn {
     0% {
-        transform: translateX(300px); /* Start off-screen to the right */
+        transform: translateX(300px);
+        /* Start off-screen to the right */
         opacity: 0;
     }
+
     100% {
-        transform: translateX(0); /* End position at right: 0 */
+        transform: translateX(0);
+        /* End position at right: 0 */
         opacity: 1;
     }
 }
