--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -1,5 +1,13 @@
 @use "../shared/styles/main.scss" as *;
 
+.deneme-stream {
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: gray;
+    padding: 50px;
+    z-index: 99999999999999;
+}
 
 .chat-general-box,
 .group-general-box,
