--- a/src/components/Calls/Components/IncomingCall/style.scss
+++ b/src/components/Calls/Components/IncomingCall/style.scss
@@ -1,10 +1,9 @@
 @use "../../../../shared/styles/main.scss" as*;
 
 .incoming-call-box {
-    @include flex-center(row, flex-start, center);
+    @include flex-center(column, center, center);
     position: absolute;
     width: 350px;
-    height: 100px;
     z-index: 999;
     bottom: 30px;
     right: 0px;
@@ -19,63 +18,74 @@
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     animation: slideIn 1s ease-out forwards;
 
-    img {
-        width: 55px;
-        height: 55px;
-        border-radius: 50%;
-        object-fit: cover;
-    }
+    .user-and-options {
+        @include flex-center(row, flex-start, center);
 
-    .user-info-and-call-status {
-        margin-left: 8px;
-
-        p {
-            font-weight: 700;
-            width: 120px;
-            font-size: 16px;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            white-space: nowrap;
-            line-height: 20px;
-        }
-
-        span {
-            color: var(--text-dark-gray);
-            font-size: 14px;
-        }
-
-    }
-
-    .call-option-buttons {
-        @include flex-center(row, center, center);
-        gap: 20px;
-        margin-left: 20px;
-
-        button {
-            @include flex-center(row, center, center);
+        img {
+            width: 55px;
+            height: 55px;
             border-radius: 50%;
-            width: 40px;
-            height: 40px;
-            font-size: 23px;
+            object-fit: cover;
+        }
 
-            &:first-child {
-                background-color: var(--blue);
-                color: var(--text-white);
-                border: 4px solid rgba(142, 161, 255, 0.622);
+        .user-info-and-call-status {
+            margin-left: 8px;
 
-                animation: scaleAnimation 0.5s infinite alternate;
+            p {
+                font-weight: 700;
+                width: 120px;
+                font-size: 16px;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                white-space: nowrap;
+                line-height: 20px;
+            }
 
-                &:hover {
-                    background-color: var(--hoverBlue);
-                    @include transition();
+            span {
+                color: var(--text-dark-gray);
+                font-size: 14px;
+            }
+
+        }
+
+        .call-option-buttons {
+            @include flex-center(row, center, center);
+            gap: 20px;
+            margin-left: 20px;
+
+            button {
+                @include flex-center(row, center, center);
+                border-radius: 50%;
+                width: 40px;
+                height: 40px;
+                font-size: 23px;
+
+                &:first-child {
+                    background-color: var(--blue);
+                    color: var(--text-white);
+                    border: 4px solid rgba(142, 161, 255, 0.622);
+
+                    animation: scaleAnimation 0.5s infinite alternate;
+
+                    &:hover {
+                        background-color: var(--hoverBlue);
+                        @include transition();
+                    }
+                }
+
+                &:last-child {
+                    background-color: var(--smooth-red);
+                    color: var(--text-white);
                 }
             }
-
-            &:last-child {
-                background-color: var(--smooth-red);
-                color: var(--text-white);
-            }
         }
+    }
+
+    .local-video {
+        margin-top: 20px;
+        width: 300px;
+        border-radius: 10px;
+        border: 4px solid var(--smooth-light-blue);
     }
 }
 
