--- a/src/components/Calls/style.scss
+++ b/src/components/Calls/style.scss
@@ -33,6 +33,7 @@
 
                     img {
                         width: 60px;
+                        height: 60px;
                         border-radius: 50%;
                         object-fit: cover;
                     }
