Refactor chat list and archive handling; update routing for archives, enhance chat card functionality, and remove unused Stream component.

--- a/src/layout/Dashboard/components/style.scss
+++ b/src/layout/Dashboard/components/style.scss
@@ -168,13 +168,13 @@
 
 // Dashboard Lists Styles
 
-.chat-list-box {
+.chat-list-box,
+.archive-list-box {
     display: flex;
     flex-direction: column;
     height: 100%;
 
     .user-list {
-
         .no-active-chats {
             @include flex-center(column, center, center);
 
