--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -85,9 +85,10 @@
                 span {
                     font-size: 12px;
                     color: var(--text-dark-gray);
+                    animation: fadeInUp 0.4s ease-in-out;
+
                 }
             }
-
         }
 
         .top-bar-buttons {
@@ -427,4 +428,18 @@
     cursor: pointer;
     border-radius: 50%;
     color: var(--blue);
+}
+
+@keyframes fadeInUp {
+    0% {
+        opacity: 0;
+        transform: translateY(20px);
+        /* Aşağıdan yukarı */
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+        /* Normal pozisyon */
+    }
 }
