--- a/src/components/Calls/Components/CallModal.scss
+++ b/src/components/Calls/Components/CallModal.scss
@@ -40,49 +40,44 @@
         @include flex-center(column, center, center);
         gap: 6px;
 
-
         img {
-            width: 125px;
-            height: 125px;
+            width: 90px;
+            height: 90px;
             border-radius: 50%;
             object-fit: cover;
             transition: all 0.7s ease;
         }
 
         p {
-            color: var(--text-black);
-            font-size: 22px;
+            color: var(--blue);
+            font-size: 20px;
             font-weight: 700;
         }
+
 
         span {
             color: var(--text-input-gray);
             font-size: 15px;
         }
 
-        &.calling {
+        &.cameraCall {
             img {
                 width: 70px;
                 height: 70px;
             }
 
             p {
-                font-size: 17px;
+                font-size: 19px;
             }
 
-
             span {
-
                 font-size: 14px;
             }
         }
-
-
     }
 
     .camera-bar {
         width: 96%;
-
         height: 100%;
         @include flex-center(row, center, center);
         position: relative;
@@ -107,7 +102,6 @@
                 border-radius: 15px;
                 border: 3px solid var(--smooth-light-blue);
                 transition: all 0.7s ease;
-
             }
 
             &.remote-connected {
