Enhance CallModal and IncomingCall components to support camera calls; update MessageBubble styles for better display of sender names and images; modify ImageModal to send images as base64 strings without encryption.

--- a/src/components/Calls/Components/CallModal.scss
+++ b/src/components/Calls/Components/CallModal.scss
@@ -7,7 +7,6 @@
 
 .call-modal {
     @include flex-center(column, space-between, center);
-
     width: 560px;
     height: 560px;
     position: relative;
@@ -198,11 +197,10 @@
                 background: var(--smooth-red);
                 color: var(--text-white);
             }
+        }
 
-            &:first-child {
-                color: #C8C9F7;
-            }
-
+        .disabled {
+            color: #C8C9F7;
         }
     }
 }
