--- a/src/shared/components/MessageBubble/style.scss
+++ b/src/shared/components/MessageBubble/style.scss
@@ -62,6 +62,7 @@
             font-size: 14px;
             @include flex-center(column, center, flex-start);
             box-shadow: rgba(42, 42, 42, 0.205) 0px 2px 8px 0px;
+            cursor: pointer;
 
             &.image {
                 padding: 3px 7px;
@@ -85,13 +86,12 @@
 
             }
 
-            .image {
+            img {
                 max-height: 350px;
                 border-radius: 5px;
                 margin-top: 5px;
                 margin-bottom: 5px;
-
-
+                cursor: pointer;
             }
         }
 
@@ -114,6 +114,43 @@
         transform: translateY(45px);
         animation: slideUpFadeIn 0.2s ease forwards;
         /* Animasyonu uygula */
+    }
+
+    .full-size-image-box {
+        @include flex-center(column, center, center);
+        gap: 12px;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(28, 28, 28, 0.768);
+        backdrop-filter: blur(4px);
+        opacity: 0; // Başlangıçta görünmez
+        animation: fadeIn 0.3s forwards; // Animasyon ekledik
+        z-index: 9999;
+
+
+        img {
+            height: 80%;
+            border-radius: 13px;
+            transform: translateY(50px); // Başlangıç pozisyonu (50px aşağıda)
+            opacity: 0; // Başlangıçta görünmez
+            animation: slideUp 0.7s ease-out forwards; // Animasyonu uygula
+        }
+
+        button {
+            @include flex-center(row, center, center);
+            width: 42px;
+            height: 42px;
+            font-size: 28px;
+            border-radius: 50%;
+            background-color: var(--smooth-light-blue);
+            color: var(--blue);
+            position: absolute;
+            top: 25px;
+            right: 25px;
+        }
     }
 }
 
