--- a/src/layout/Dashboard/components/style.scss
+++ b/src/layout/Dashboard/components/style.scss
@@ -116,6 +116,20 @@
             }
         }
 
+        .last-message-audio {
+            @include flex-center(row, center);
+            gap: 5px;
+            color: var(--smooth-red);
+
+            svg {
+                font-size: 24px;
+            }
+
+            span {
+                color: var(--smooth-red);
+            }
+        }
+
         p {
             font-weight: 700;
             font-size: 14px;
