--- a/src/shared/components/MessageBubble/style.scss
+++ b/src/shared/components/MessageBubble/style.scss
@@ -69,6 +69,18 @@
                 background-color: rgba(207, 207, 207, 0.133);
             }
 
+            &.audio {
+                padding: 0px;
+            }
+
+            &.audio-group {
+                padding: 10px;
+            }
+
+            &.audio-group-sender {
+                padding: 0;
+            }
+
             .user-info {
                 width: 100%;
                 @include flex-center(row, flex-start, center);
@@ -77,7 +89,7 @@
                 .sender-profile-name {
                     font-weight: bold;
 
-                    &.image {
+                    &.other {
                         width: 100%;
                         margin-left: 10px;
                         margin-bottom: -2px;
@@ -101,6 +113,7 @@
             font-size: 12px;
             font-weight: 700;
         }
+
     }
 
     .status-box {
@@ -168,4 +181,78 @@
         transform: translateY(0);
         /* Yukarı çık */
     }
+}
+
+
+// Component Styles
+
+//! Audio Message Styles
+
+
+.audio-player {
+    background-color: var(--smooth-light-blue);
+    color: #ffffff;
+    border-radius: 12px;
+    width: 300px;
+    @include flex-center(row, center, center);
+    padding: 5px 10px;
+
+    .audio-controls {
+        @include flex-center(row, center, center);
+        width: 300px;
+
+        .play-pause-btn {
+            width: 34px;
+            height: 34px;
+            background-color: var(--smooth-light-blue);
+            color: var(--blue);
+            font-size: 34px;
+            animation: fadeEffect 0.3s ease-in-out;
+        }
+
+        .progress-container {
+            width: 100%;
+            @include flex-center(row, center, center);
+            gap: 16px;
+
+
+            .time {
+                font-size: 14px;
+                color: var(--blue);
+                width: 28px;
+            }
+        }
+    }
+
+}
+
+.custom-slider {
+    .MuiSlider-thumb {
+        margin-top: 3px;
+        background-color: var(--blue) !important;
+        width: 14px;
+        height: 14px;
+    }
+
+    .MuiSlider-rail {
+        margin-top: 3px;
+        background-color: var(--smooth-blue) !important;
+    }
+
+    .MuiSlider-track {
+        margin-top: 3px;
+        background-color: var(--blue) !important;
+    }
+}
+
+.download-btn {
+    background-color: var(--smooth-light-blue);
+    color: var(--blue);
+    font-size: 20px;
+    border-radius: 50%;
+    width: 42px;
+    height: 42px;
+    @include flex-center(row, center, center);
+    cursor: pointer;
+    transition: all 0.3s ease-out;
 }
