Update group profile handling in GroupDetailsBar and GroupTopBar; enhance NewGroupModal for photo upload and user removal; clean up SignalRContext and GroupChatCard; remove MembershipAgreement component; refine styles in MembershipModal and Sign components.

--- a/src/pages/Sign/style.scss
+++ b/src/pages/Sign/style.scss
@@ -192,7 +192,7 @@ form {
                 margin: 7px;
                 border-radius: 50%;
                 @include transition();
-             
+
             }
 
             .react-datepicker__day--selected {
@@ -257,7 +257,7 @@ form {
     h1 {
         text-align: center;
         font-size: 25px;
-        border-bottom: 2px solid rgb(239, 239, 239);
+        border-bottom: 2px solid var(--smooth-light-blue);
         padding-bottom: 10px;
     }
 
