--- a/src/shared/components/AIModal/style.scss
+++ b/src/shared/components/AIModal/style.scss
@@ -41,23 +41,198 @@
 
     .content-box {
         height: 100%;
+        @include flex-center(column, center, center);
 
-        p {
-            margin: 0 0 10px;
-            font-size: 16px;
-            color: #333;
-            font-weight: bold;
+        .navigation-box,
+        .options-box {
+            height: 60px;
         }
 
-        button {
-            background: #007bff;
-            color: white;
-            border: none;
-            padding: 8px 16px;
-            border-radius: 6px;
-            cursor: pointer;
-            font-size: 14px;
-            transition: background 0.2s ease-in-out;
+        .navigation-box,
+        .options-box,
+        .result-box {
+            width: 100%;
+        }
+
+        .navigation-box {
+            padding-bottom: 10px;
+            @include flex-center(row, space-between, center);
+            border-bottom: 3px solid var(--smooth-light-blue);
+
+            img {
+                width: 40px;
+                height: 40px;
+            }
+
+            button {
+                @include flex-center(row, center, center);
+            }
+
+            .text-generate-btn,
+            .image-generate-btn {
+                padding: 8px 12px;
+                gap: 5px;
+                border-radius: 8px;
+                background-color: var(--smooth-light-blue);
+                font-size: 15px;
+                color: var(--blue);
+
+                svg {
+                    width: 20px;
+                    height: 20px;
+                }
+
+                &.active {
+                    border: 2px solid var(--smooth-blue);
+                }
+            }
+
+            .close-btn {
+                width: 35px;
+                height: 35px;
+                font-size: 22px;
+                border-radius: 50%;
+                background-color: var(--smooth-light-blue);
+                color: var(--blue);
+            }
+        }
+
+        .result-box {
+            height: 100%;
+            @include flex-center(row, center, flex-start);
+
+            .banner {
+                @include flex-center(row, center, center);
+
+                width: 100%;
+                height: 100%;
+
+                img {
+                    width: 130px;
+                    height: 130px;
+                }
+            }
+
+            .text-generator-result,
+            .image-generator-result {
+                width: 100%;
+            }
+
+            .text-generator-result {
+                margin-top: 5px;
+                padding: 0px 10px;
+                overflow: auto;
+                max-height: 300px;
+                overflow-y: scroll;
+                overflow-x: hidden; // Yatay kaydırmayı kapatır
+
+
+                p {
+                    text-align: justify;
+                    font-size: 13px;
+                }
+            }
+
+            .image-generator-result {
+                height: 100%;
+                @include flex-center(row, center, center);
+
+                img {
+                    max-width: 300px;
+                    max-height: 280px;
+                    border-radius: 10px;
+                    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+                }
+            }
+        }
+
+        .options-box {
+            @include flex-center(row, center, center);
+
+            .input-box {
+                @include flex-center(row, center, center);
+                width: 100%;
+                height: 100%;
+                background-color: var(--smooth-light-blue);
+                gap: 6px;
+                border-radius: 30px;
+                padding: 0px 7px;
+
+                input {
+                    width: 100%;
+                    padding-left: 10px;
+                    font-size: 14px;
+                    color: var(--blue);
+
+                    &::placeholder {
+                        color: var(--blue);
+                    }
+                }
+
+                button {
+                    background-color: var(--blue);
+                    color: var(--text-white);
+                    padding: 5px;
+                    border-radius: 50%;
+                    font-size: 26px;
+                    @include flex-center(row, center, center);
+                }
+            }
+
+            .result-options-box {
+                border-top: 3px solid var(--smooth-light-blue);
+                padding-top: 10px;
+                width: 100%;
+                height: 100%;
+                @include flex-center(row, center, center);
+                gap: 10px;
+                padding: 5px;
+                padding-top: 10px;
+
+                .buttons {
+                    @include flex-center(row, space-between, center);
+                    height: 100%;
+                    width: 180px;
+                    padding: 5px 2px;
+                    border-radius: 10px;
+                    gap: 5px;
+
+                    button {
+                        @include flex-center(row, center, center);
+                        padding: 8px;
+                        border-radius: 10px;
+                        background-color: var(--smooth-light-blue);
+                        color: var(--blue);
+                        @include transition();
+
+                        &:hover {
+                            scale: 1.2;
+                        }
+
+                        &:active {
+                            scale: 0.9;
+                        }
+                    }
+                }
+
+                .send-message-btn {
+                    background-color: var(--blue);
+                    color: var(--text-white);
+                    width: 150px;
+                    height: 85%;
+                    border-radius: 30px;
+                    font-size: 15px;
+                    @include transition();
+
+                    &:hover {
+                        background-color: var(--hoverBlue);
+                    }
+
+                    &:active {
+                        scale: 1;
+                    }
+                }
+            }
         }
     }
 }
