Refactor date formatting in UserMessageBar; enhance active chat and call indicators in GroupChatCard and UserCallCard; update AIModal to handle prompt submission with Enter key.

--- a/src/layout/Dashboard/components/style.scss
+++ b/src/layout/Dashboard/components/style.scss
@@ -55,12 +55,19 @@
     @include transition();
     border-radius: 17px;
 
-
     &:first-child {
         margin-top: 0px;
     }
 
     &:hover {
+        background-color: var(--user-message-box-color);
+    }
+
+    &.active-chat {
+        background-color: var(--user-message-box-color);
+    }
+
+    &.active-call {
         background-color: var(--user-message-box-color);
     }
 
