--- a/src/layout/Dashboard/style.scss
+++ b/src/layout/Dashboard/style.scss
@@ -32,7 +32,8 @@
 
     .dynamic-list-box {
         width: 100%;
-        height: 75vb;
+        height: 100%;
+        overflow: hidden;
         background-color: var(--smooth-white-color);
         margin-top: 15px;
         border-radius: 28px 28px 0px 0px;
